--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="pizza.css">
     <link rel="shortcut icon" href="./IMG/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <title>Pizza dough calculator</title>
+    <title>PizzApp</title>
 </head>
 
 <body>
-
 
     <main>
 
