--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     </div>
                 </div>
                 <div class="input-element">
-                    <label for="ball">Ball size:</label>
-                    <input type="number" name="ball" id="ball" min="1" value="300">
+                    <label for="ball">Pizza dough size (g):</label>
+                    <input type="number" name="ball" id="ball" min="1" value="270">
                 </div>
 
                 <div class="input-element">
@@ -120,10 +120,32 @@
                             <p><span id="list-span-total"></span> g</p>
                         </b>
                     </div>
+
+                </div>
+                <div class="list-element">
+                    <div class="list-element__title">
+                        <p>Ball size:</p>
+                    </div>
+                    <div class="list-element__quantity">
+                        <b>
+                            <p><span id="list-span-ballsize"></span> g</p>
+                        </b>
+                    </div>
+                </div>
+
+                <div class="list-element">
+
+                    <div class="list-element__title">
+                        <p>Hidrataion:</p>
+                    </div>
+                    <div class="list-element__quantity">
+                        <b>
+                            <p><span id="list-span-hidratation"></span> %</p>
+                        </b>
+                    </div>
                 </div>
 
                 <button class="btn btn-back" id="back-btn" type="button">Back</button>
-
 
             </div>
 
