--- a/index.html
+++ b/index.html
@@ -137,40 +137,34 @@
                     </div>
                 </div>
 
-                <div class="list-element">
 
-                    <div class="list-element__title">
-                        <p>Total:</p>
-                    </div>
-                    <div class="list-element__quantity">
+                <div class="dough-data">
+
+                    <div class="dough-data__element">
                         <b>
-                            <p><span id="list-span-total"></span> g</p>
+                            <p>Total</p>
                         </b>
+                        <p><span id="list-span-total"></span> g</p>
+                    </div>
+
+
+                    <div class="dough-data__element">
+                        <b>
+                            <p>Ball size</p>
+                        </b>
+                        <p><span id="list-span-ballsize"></span> g</p>
+                    </div>
+                    <div class="dough-data__element">
+                        <b>
+                            <p>Hidrataion</p>
+                        </b>
+                        <p><span id="list-span-hidratation"></span> %</p>
+
                     </div>
 
                 </div>
-                <div class="list-element">
-                    <div class="list-element__title">
-                        <p>Ball size:</p>
-                    </div>
-                    <div class="list-element__quantity">
-                        <b>
-                            <p><span id="list-span-ballsize"></span> g</p>
-                        </b>
-                    </div>
-                </div>
 
-                <div class="list-element">
 
-                    <div class="list-element__title">
-                        <p>Hidrataion:</p>
-                    </div>
-                    <div class="list-element__quantity">
-                        <b>
-                            <p><span id="list-span-hidratation"></span> %</p>
-                        </b>
-                    </div>
-                </div>
 
                 <button class="btn btn-back" id="back-btn" type="button">Back</button>
 
