--- a/index.html
+++ b/index.html
@@ -147,19 +147,18 @@
                         <p><span id="list-span-total"></span> g</p>
                     </div>
 
-
                     <div class="dough-data__element">
                         <b>
                             <p>Ball size</p>
                         </b>
                         <p><span id="list-span-ballsize"></span> g</p>
                     </div>
+
                     <div class="dough-data__element">
                         <b>
-                            <p>Hidrataion</p>
+                            <p>Hidratation</p>
                         </b>
                         <p><span id="list-span-hidratation"></span> %</p>
-
                     </div>
 
                 </div>
